fortran77-compiler/gramatica.txt
===================
    Gramática
===================

program               -> program_unit
                       | program program_unit

program_unit          -> main_program
                       | function_subprogram
                       | subroutine_subprogram

main_program          -> PROGRAM IDEN NEWLINE body END NEWLINE

function_subprogram   -> type_spec FUNCTION IDEN '(' param_list ')' NEWLINE body END NEWLINE
                       | FUNCTION IDEN '(' param_list ')' NEWLINE body END NEWLINE
                       | type_spec FUNCTION IDEN '(' ')' NEWLINE body END NEWLINE
                       | FUNCTION IDEN '(' ')' NEWLINE body END NEWLINE

subroutine_subprogram -> SUBROUTINE IDEN '(' param_list ')' NEWLINE body END NEWLINE
                       | SUBROUTINE IDEN '(' ')' NEWLINE body END NEWLINE

param_list            -> IDEN
                       | param_list ',' IDEN

body                  -> decl_section stmt_section

decl_section          -> /* vazio */
                       | decl_section declaration NEWLINE

stmt_section          -> /* vazio */
                       | stmt_section stmt_line

stmt_line             -> statement NEWLINE
                       | LABEL statement NEWLINE
                       | LABEL CONTINUE NEWLINE

declaration           -> type_spec var_decl_list

type_spec             -> INTEGER
                       | REAL
                       | LOGICAL
                       | CHARACTER
                       | CHARACTER '*' INT_LIT

var_decl_list         -> var_decl
                       | var_decl_list ',' var_decl

var_decl              -> IDEN
                       | IDEN '(' INT_LIT ')'

statement             -> assignment_stmt
                       | if_stmt
                       | do_stmt
                       | goto_stmt
                       | print_stmt
                       | read_stmt
                       | call_stmt
                       | return_stmt
                       | stop_stmt

assignment_stmt       -> variable '=' expr

if_stmt               -> if_then_block
                       | logical_if_stmt

if_then_block         -> IF '(' expr ')' THEN NEWLINE stmt_section ENDIF
                       | IF '(' expr ')' THEN NEWLINE stmt_section ELSE NEWLINE stmt_section ENDIF

logical_if_stmt       -> IF '(' expr ')' statement

do_stmt               -> DO INT_LIT IDEN '=' expr ',' expr NEWLINE stmt_section LABEL CONTINUE
                       | DO INT_LIT IDEN '=' expr ',' expr ',' expr NEWLINE stmt_section LABEL CONTINUE

goto_stmt             -> GOTO INT_LIT

print_stmt            -> PRINT '*' ',' io_list

read_stmt             -> READ '*' ',' io_list

io_list               -> io_item
                       | io_list ',' io_item

io_item               -> expr

call_stmt             -> CALL IDEN '(' expr_list ')'
                       | CALL IDEN '(' ')'

return_stmt           -> RETURN

stop_stmt             -> STOP

expr                  -> expr arithmetic_op expr
                       | expr logical_op expr
                       | expr relational_op expr
                       | unary_arithmetic_op expr
                       | unary_logical_op expr
                       | '(' expr ')'
                       | INT_LIT
                       | REAL_LIT
                       | STRING_LIT
                       | TRUE
                       | FALSE
                       | variable
                       | func_call

arithmetic_op         -> '+' | '-' | '*' | '/' | POWER
logical_op            -> OP_AND | OP_OR
relational_op         -> OP_EQ | OP_NE | OP_LT | OP_LE | OP_GT | OP_GE
unary_arithmetic_op   -> '+' | '-'
unary_logical_op      -> OP_NOT

variable              -> IDEN
                       | IDEN '(' expr_list ')'
                       | IDEN '(' ')'

expr_list             -> expr
                       | expr_list ',' expr

func_call             -> MOD '(' expr ',' expr ')'
                       | SQRT '(' expr ')'
                       | MAX '(' expr_list ')'
                       | MIN '(' expr_list ')'
